--- a/_patterns/footers/footer.css
+++ b/_patterns/footers/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--color-primary-light);
+  background-color: var(--color-primary-dark);
   color: #fff;
 }
 
